# COVID-TB_Classification_VGG16

./: COVID_CT_Classifier.py  COVID_VGG16.ipynb  DatasetInfo.xlsx  GUI.py  GUI.ui  ImageResize.py  LICENSE.txt  MedicalImageClassifier.py  README.md  TTTN203_Tuberculosis.ipynb  TTTN_ThaiBaoKhang.ipynb  UI.py  inputUI.ui  mainUI.py  requirements.txt  resizeUI.py  setup.cfg  setup.py
