[metadata]
name = COVID-Classifer-KhangThai
version = 1.0.0
author = Thai Bao Khang 
author_email = Minatozaki0911@users.noreply-github.com 
description = Covid patitent CT scan classifier desktop application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Minatozaki0911/summerIntern203.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
